Fix layout issues

--- a/css/contact.css
+++ b/css/contact.css
@@ -149,7 +149,7 @@ iframe {
 }
 
 .label-input100 {
-    font-family: 'Open Sans', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 18px;
     color: #ffffff;
     line-height: 1.5;
@@ -160,9 +160,9 @@ iframe {
     display: block;
     width: 100%;
     background: transparent;
-    font-family: 'Open Sans', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 20px;
-    color: #fffff;
+    color: #ffffff;
     line-height: 1.2;
     padding: 0 5px;
 }
@@ -242,8 +242,7 @@ textarea.input100 {
     height: 50px;
     background-color: #ff4b5a;
     border-radius: 25px;
-    font-family: 'Open Sans',
-    serif;
+    font-family: 'Lato', sans-serif;
     font-size: 16px;
     color: #fff;
     line-height: 1.2;
@@ -330,7 +329,7 @@ textarea.input100 {
     transform: translateY(-50%);
     right: 2px;
     pointer-events: none;
-    font-family: 'Open Sans', serif;
+    font-family: 'Lato', sans-serif;
     color: #c80000;
     font-size: 13px;
     line-height: 1.4;
