--- a/css/new-age.css
+++ b/css/new-age.css
@@ -1,10 +1,7 @@
 html,
 body {
   width: 100%;
-  height: 100%; 
-  background: rgb(5,0,85);
-  background-image: linear-gradient(to top, #00c6fb 0%, #005bea 100%);
-  background-attachment: fixed;}
+  height: 100%; }
 
 body {
   font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif'; }
@@ -116,7 +113,6 @@ section {
 header.masthead {
   position: relative;
   width: 100vm;
-  height: 100vh;
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
